--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -22858,7 +22858,6 @@ bilibili	blbl
 房门	flmj
 访美	flmm
 翂	flmn
-分离模式	flms
 翂	flmz
 袯	flnl
 房内	flno
@@ -48648,7 +48647,6 @@ GPRS	gprs
 借款人	jjkr
 健康人	jjkr
 仅靠	jjkt
-价款	jjku
 借壳	jjku
 借款	jjku
 岌岌可危	jjkw
@@ -48657,17 +48655,16 @@ GPRS	gprs
 仅	jjl
 焦裂	jjla
 俱乐部	jjlb
-坚甲利兵	jjlb
 佳丽	jjld
 津津乐道	jjld
-价廉	jjlh
 借来	jjlh
+价廉	jjlh
 紧紧拉住	jjli
 伎俩	jjlj
+俊朗	jjll
+伽利略	jjll
 仅	jjll
 今	jjll
-伽利略	jjll
-俊朗	jjll
 俊	jjlm
 借力	jjln
 假劣	jjlp
@@ -48712,7 +48709,6 @@ GPRS	gprs
 俊男	jjno
 今年	jjnt
 健脑	jjnv
-间脑	jjnv
 集纳	jjnx
 经久耐用	jjny
 绞尽脑汁	jjnz
@@ -48732,8 +48728,8 @@ GPRS	gprs
 健脾胃	jjpw
 集群	jjqb
 集权	jjqc
-佳期	jjqf
 假期	jjqf
+佳期	jjqf
 假球	jjqg
 俊俏	jjqj
 健全	jjqj
@@ -48749,8 +48745,8 @@ GPRS	gprs
 介入	jjrm
 仅容	jjrn
 假日	jjrr
-介	jjrr
 今日	jjrr
+介	jjrr
 假如	jjrs
 偈	jjrw
 剑刃	jjrz
@@ -48815,6 +48811,7 @@ GPRS	gprs
 集群	jjub
 集权	jjuc
 假期	jjuf
+佳期	jjuf
 假球	jjug
 佶	jjui
 俊俏	jjuj
@@ -48848,8 +48845,8 @@ GPRS	gprs
 今昔	jjxf
 假小子	jjxi
 剑侠	jjxj
-焦心	jjxl
 集训	jjxl
+焦心	jjxl
 今宵	jjxn
 间歇	jjxr
 见机行事	jjxs
@@ -48867,11 +48864,12 @@ GPRS	gprs
 介于	jjyg
 今夜	jjyh
 介意	jjyh
+佳音	jjyh
 倦意	jjyh
 借喻	jjyi
 借阅	jjyj
-偈语	jjyl
 隽永	jjyl
+偈语	jjyl
 佳肴	jjym
 仅由	jjyo
 戒急用忍	jjyr
@@ -48899,24 +48897,23 @@ GPRS	gprs
 仅指	jjzk
 假证	jjzl
 焦灼	jjzm
-借助	jjzo
 集中	jjzo
+借助	jjzo
 介质	jjzq
 间奏曲	jjzq
 今早	jjzr
 击节赞赏	jjzs
 掎角之势	jjzs
-借重	jjzt
 假造	jjzt
+借重	jjzt
 击节赞叹	jjzt
 竞技状态	jjzt
 间奏曲	jjzu
-介子	jjzv
 假肢	jjzv
 偈子	jjzv
 间杂	jjzw
-间质性	jjzx
 集装箱	jjzx
+间质性	jjzx
 集中营	jjzy
 几经周折	jjzz
 叽叽喳喳	jjzz
@@ -48932,8 +48929,8 @@ GPRS	gprs
 据	jkb
 惊恐不安	jkba
 拒不	jkba
-揭榜	jkbc
 搅拌车	jkbc
+揭榜	jkbc
 叫苦不迭	jkbd
 据	jkbf
 接班	jkbg
@@ -48941,10 +48938,10 @@ GPRS	gprs
 捃	jkbi
 据报载	jkbi
 搅拌机	jkbj
-抉	jkbk
+搅拌	jkbk
 拘捕	jkbk
 捷报	jkbk
-搅拌	jkbk
+抉	jkbk
 挤扁	jkbl
 挤爆	jkbm
 街边	jkbn
@@ -48968,12 +48965,12 @@ GPRS	gprs
 挤车	jkcs
 据称	jkct
 接触器	jkcu
+揪出	jkcv
 挤出	jkcv
 捐出	jkcv
-揪出	jkcv
 接触	jkcw
-交口称誉	jkcy
 据此	jkcy
+交口称誉	jkcy
 艰苦创业	jkcy
 交口称赞	jkcz
 健康成长	jkcz
@@ -48982,12 +48979,11 @@ GPRS	gprs
 接电话	jkdh
 揭底	jkdh
 接待站	jkdi
-挤掉	jkdk
 接待	jkdk
 挤对	jkdl
-挤兑	jkdm
-接单	jkdm
 街道	jkdm
+接单	jkdm
+挤兑	jkdm
 揪斗	jkdn
 接电	jkdo
 接地气	jkdq
@@ -49020,7 +49016,6 @@ GPRS	gprs
 接骨	jkgo
 接轨	jkgs
 接管	jkgt
-揭竿	jkgt
 捐给	jkgx
 挤	jkh
 接合部	jkhb
@@ -49089,8 +49084,8 @@ GPRS	gprs
 径	jkl
 接龙	jkla
 接力棒	jklb
-径流	jkld
 捡漏	jkld
+径流	jkld
 径	jklf
 据理	jklg
 揭露	jklh
@@ -49101,9 +49096,9 @@ GPRS	gprs
 健康理念	jkln
 接力	jkln
 街里	jklo
+接连	jkls
 拘留所	jkls
 接力赛	jkls
-接连	jkls
 叫苦连天	jklt
 搅乱	jklt
 拘留	jklw
@@ -49220,6 +49215,7 @@ GPRS	gprs
 拒签	jkut
 拣起	jkuu
 捡起	jkuu
+揭去	jkqu
 技巧性	jkux
 捐钱	jkuy
 拘	jkw
@@ -49243,9 +49239,8 @@ GPRS	gprs
 揪心	jkxl
 街心	jkxl
 据悉	jkxm
-径向	jkxr
-捐血	jkxr
 揭晓	jkxr
+捐血	jkxr
 接线生	jkxs
 拣选	jkxt
 接线	jkxx
@@ -49256,8 +49251,8 @@ GPRS	gprs
 接引	jkyb
 技艺	jkye
 捷运	jkyg
-技痒	jkyh
 接应	jkyh
+技痒	jkyh
 拘役	jkyk
 据以	jkyl
 金科玉律	jkyl
@@ -49303,9 +49298,8 @@ GPRS	gprs
 加勒比海	jlbh
 肩部	jlbh
 颈部	jlbh
-记不住	jlbi
 诀别	jlbi
-急来抱佛脚	jlbj
+记不住	jlbi
 肩并肩	jlbj
 艰	jlbk
 祲	jlbl
@@ -49321,10 +49315,8 @@ GPRS	gprs
 襟	jlc
 颈椎病	jlcb
 计程车	jlcc
-计财处	jlcc
-劲草	jlce
-计酬	jlcf
 鸡翅	jlcf
+计酬	jlcf
 襟	jlcg
 劲吹	jlci
 江郎才尽	jlcj
@@ -49373,7 +49365,6 @@ GPRS	gprs
 计费	jlfb
 记分册	jlfc
 军法	jlfd
-加利福尼亚半岛	jlfd
 讲法	jlfd
 谨	jlfd
 计	jlff
@@ -49384,13 +49375,10 @@ GPRS	gprs
 计分	jlfm
 谨	jlfo
 军分区	jlfq
-肩负起	jlfq
 居里夫人	jlfr
 军分区	jlfu
-肩负起	jlfu
 谨防	jlfv
 肩负	jlfw
-加利福尼亚大学	jlfx
 加利福尼亚	jlfy
 讲	jlg
 鸡公煲	jlgb
@@ -49427,9 +49415,8 @@ GPRS	gprs
 军火库	jlhk
 讲话	jlhl
 军火	jlhm
-襟怀	jlhn
-计划内	jlhn
 记恨	jlhn
+计划内	jlhn
 褯	jlho
 解铃还须系铃人	jlhr
 计划	jlhs
@@ -49446,13 +49433,13 @@ GPRS	gprs
 记者	jlif
 记载	jlif
 诘责	jlig
-军装	jlih
-肩章	jlih
-记者会	jlih
 讲座	jlih
+军装	jlih
+记者会	jlih
+肩章	jlih
 既来之，则安之	jlii
-记者站	jlii
 记者证	jlii
+记者站	jlii
 鸡爪子	jlii
 记住	jlij
 计征	jlik
@@ -49579,8 +49566,8 @@ GPRS	gprs
 计量器具	jlqj
 讥诮	jlql
 讲情面	jlqm
-军情	jlqn
 诀窍	jlqn
+军情	jlqn
 军区	jlqs
 记起	jlqu
 焦虑情绪	jlqx
@@ -49591,12 +49578,12 @@ GPRS	gprs
 军令如山	jlrs
 军	jls
 诫	jlsa
-计生办	jlsb
 记事本	jlsb
-计算尺	jlsc
+计生办	jlsb
 记述	jlsc
 讲述	jlsc
 讵	jlsc
+计算尺	jlsc
 艰涩	jlsd
 军事	jlsf
 军事化	jlsh
@@ -49606,19 +49593,17 @@ GPRS	gprs
 军事家	jlsj
 讲授	jlsk
 讲说	jlsl
-鸡饲料	jlsl
 计数	jlsm
 谨慎	jlsn
 军史	jlso
 讲师	jlsp
 计算器	jlsq
-计时器	jlsq
 计数器	jlsq
+计时器	jlsq
 计时	jlsr
 军嫂	jlss
 计算所	jlss
 计算	jlst
-讲师团	jlst
 计算器	jlsu
 计时器	jlsu
 计数器	jlsu
@@ -49657,8 +49642,8 @@ GPRS	gprs
 计量器具	jluj
 讥诮	jlul
 讲情面	jlum
-军情	jlun
 诀窍	jlun
+军情	jlun
 军区	jlus
 刭	jluu
 记起	jluu
@@ -49887,10 +49872,10 @@ GPRS	gprs
 精简版	jmjb
 精校	jmjc
 精进	jmjg
-煎剂	jmjh
 精减	jmjh
-剪径	jmjk
+煎剂	jmjh
 剪接	jmjk
+剪径	jmjk
 精妙绝伦	jmjl
 精讲	jmjl
 炯炯	jmjm
@@ -49909,11 +49894,11 @@ GPRS	gprs
 精灵	jmlb
 眷恋	jmlh
 眷侣	jmlj
-爵禄	jmll
 精良	jmll
 翦	jmll
-卷帘门	jmlm
+爵禄	jmll
 精炼	jmlm
+卷帘门	jmlm
 精力	jmln
 精美礼品	jmlp
 鸠摩罗什	jmls
@@ -49921,7 +49906,6 @@ GPRS	gprs
 精馏	jmlw
 精练	jmlx
 紧密联系	jmlx
-经贸领域	jmly
 精力	jmlz
 煎	jmm
 卷面	jmma
@@ -49988,9 +49972,8 @@ GPRS	gprs
 集贸市场	jmsc
 精深	jmsd
 精索	jmsf
-兼施	jmsh
-救民水火	jmsh
 精瘦	jmsh
+救民水火	jmsh
 居民身份证	jmsi
 精舍	jmsj
 精神科	jmsk
@@ -50055,8 +50038,8 @@ GPRS	gprs
 卷	jmx
 卷心菜	jmxc
 居民消费	jmxf
-兼修	jmxj
 精修	jmxj
+兼修	jmxj
 精选集	jmxj
 精心	jmxl
 卷须	jmxq
@@ -50068,8 +50051,8 @@ GPRS	gprs
 焗油	jmyd
 精油	jmyd
 精液	jmyd
-兼营	jmye
 精英	jmye
+兼营	jmye
 精要	jmyf
 精于	jmyg
 救民于水火	jmyh
@@ -50136,14 +50119,13 @@ GPRS	gprs
 家臣	jncf
 家蚕	jncg
 家产	jnch
-家常话	jnch
 家畜	jnch
-家传	jncj
 家常	jncj
-加持	jnck
+家传	jncj
 举措	jnck
-加词	jncl
+加持	jnck
 惊诧	jncl
+加词	jncl
 加粗	jncm
 觉察	jncn
 家财	jnco
@@ -50168,7 +50150,6 @@ GPRS	gprs
 家道	jndm
 举刀	jndn
 家电	jndo
-寄到	jnds
 驾到	jnds
 加多	jndw
 暨南大学	jndx
@@ -50192,8 +50173,8 @@ GPRS	gprs
 寄发	jnfn
 加罚	jnfo
 加封	jnfu
-举凡	jnfw
 家风	jnfw
+举凡	jnfw
 寄发	jnfz
 举	jng
 缉拿归案	jnga
@@ -50231,13 +50212,12 @@ GPRS	gprs
 加害于	jnhy
 加	jni
 加注	jnid
-家政	jnif
 加载	jnif
+家政	jnif
 架子鼓	jnig
 家族	jnih
 家长会	jnih
 加	jnii
-加足	jnii
 家长制	jnii
 家住	jnij
 惊蛰	jnik
@@ -50286,9 +50266,8 @@ GPRS	gprs
 加勒比	jnlb
 架梁	jnld
 家乐福	jnlf
-加亮	jnlh
-寄来	jnlh
 惊雷	jnlh
+寄来	jnlh
 举例子	jnli
 举例	jnlj
 加料	jnlm
@@ -50370,16 +50349,16 @@ GPRS	gprs
 家属	jnsb
 寄生虫	jnsc
 驾驶舱	jnsc
-加深	jnsd
 加湿	jnsd
 加沙	jnsd
 袈裟	jnsd
+加深	jnsd
 家世	jnsf
 加速	jnsf
 举世	jnsf
 家塾	jnsh
-寄宿制	jnsi
 驾驶证	jnsi
+寄宿制	jnsi
 家俬	jnsj
 举手	jnsk
 加速卡	jnsk
@@ -50407,8 +50386,8 @@ GPRS	gprs
 驾驶	jnsx
 加上	jnsy
 驾驶员	jnsy
-寄宿制	jnsz
 驾驶证	jnsz
+寄宿制	jnsz
 窖	jnt
 窘态	jnta
 惊天地	jntd
@@ -50491,8 +50470,8 @@ GPRS	gprs
 加油站	jnyi
 加油机	jnyj
 驾御	jnyk
-寄语	jnyl
 惊讶	jnyl
+寄语	jnyl
 九牛一毛	jnym
 寄养	jnym
 家宴	jnyn
@@ -50507,8 +50486,6 @@ GPRS	gprs
 惊疑	jnyw
 驾驭	jnyx
 加油站	jnyz
-家在	jnza
-架在	jnza
 加注	jnzd
 加载	jnzf
 家政	jnzf
@@ -50636,7 +50613,6 @@ GPRS	gprs
 蛟龙	jola
 见老	jolf
 畸恋	jolh
-畸零	jolh
 见谅	joll
 甲类	jolm
 畯	jolm
@@ -51048,7 +51024,6 @@ GPRS	gprs
 晶粒	jrlm
 肌肉拉伤	jrls
 寄人篱下	jrlx
-金融领域	jrly
 炅	jrm
 皭	jrmb
 景美	jrmm
@@ -51089,8 +51064,8 @@ GPRS	gprs
 景山	jrso
 景色	jrsw
 敫	jrt
-景泰	jrtg
 晶体管	jrtg
+景泰	jrtg
 金融体制	jrti
 晶体	jrtj
 敫	jrtk
@@ -51214,9 +51189,9 @@ GPRS	gprs
 妓	jsf
 姬	jsfc
 精神负担	jsfd
-奸夫	jsfg
 姐夫	jsfg
 轿夫	jsfg
+奸夫	jsfg
 精神分裂症	jsfi
 及时反馈	jsfk
 减数分裂	jsfl
@@ -51621,8 +51596,8 @@ GPRS	gprs
 兼听则明，偏信则暗	jtia
 简体中文版	jtib
 矫治	jtid
-矫正	jtif
 简直	jtif
+矫正	jtif
 简章	jtih
 简装	jtih
 筥	jtii
@@ -51786,8 +51761,8 @@ GPRS	gprs
 兼听则明，偏信则暗	jtza
 简体中文版	jtzb
 矫治	jtzd
-矫正	jtzf
 简直	jtzf
+矫正	jtzf
 简章	jtzh
 简装	jtzh
 笳	jtzi
@@ -55431,8 +55406,6 @@ GPRS	gprs
 傀儡	kjlj
 阔佬	kjlj
 阔论	kjll
-科技领域	kjly
-会计模式	kjms
 倥	kjn
 倥	kjnf
 阃	kjo
@@ -60123,16 +60096,13 @@ GPRS	gprs
 临机应变	ljyb
 略见一斑	ljyb
 灵机一动	ljyd
-领域中	ljyi
 垃圾邮件	ljyj
 俚语	ljyl
 领养	ljym
-领域内	ljyn
 逻辑运算	ljys
 领域	ljyu
 敛阴	ljyv
 领用	ljyw
-领域中	ljyz
 仂	ljz
 领涨	ljzd
 邻座	ljzh
@@ -112945,8 +112915,8 @@ QQ密码	qqmm
 杀伤	smsj
 杀手锏	smsj
 烧伤	smsj
-受损	smsk
 杀手	smsk
+受损	smsk
 杀伤力	smsl
 熟门熟路	smsl
 书面声明	smsm
@@ -118921,11 +118891,12 @@ QQ密码	qqmm
 体质	tjiq
 体制上	tjis
 体重	tjit
+体制	tjit
 偷走	tjiu
 体脂	tjiv
 停驻	tjix
-停战	tjiy
 停止	tjiy
+停战	tjiy
 偷	tjj
 停建	tjjb
 体检	tjjc
@@ -119156,11 +119127,12 @@ QQ密码	qqmm
 体质	tjzq
 体制上	tjzs
 体重	tjzt
+体制	tjzt
 偷走	tjzu
 体脂	tjzv
 停驻	tjzx
-停战	tjzy
 停止	tjzy
+停战	tjzy
 挺	tk
 掏	tk
 托	tk
@@ -121562,6 +121534,7 @@ QQ密码	qqmm
 脱帽	tvmo
 螣	tvmo
 脱毛	tvmt
+脱敏	tvmt
 胎膜	tvmv
 䲢	tvmw
 縢	tvmx
@@ -131754,6 +131727,7 @@ Z	vyz
 外面	wwma
 外贸部	wwmb
 乌梅	wwmc
+万万没想到	wwmd
 外蒙	wwme
 外卖	wwmf
 外蒙古	wwmg
@@ -147872,7 +147846,6 @@ Z	vyz
 语音聊天	yylt
 银样蜡枪头	yylt
 遥遥领先	yylx
-应用领域	yyly
 银铃	yyly
 铫	yym
 阴云密布	yymb
