--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -21242,8 +21242,8 @@ bilibili	blbl
 砩	fabi
 奋笔	fabt
 否定句	fadj
-否定	fadn
 奋斗	fadn
+否定	fadn
 奋发	fafn
 豮	fafo
 奋发	fafz
@@ -28137,8 +28137,8 @@ bilibili	blbl
 供应	gjyh
 供应站	gjyi
 光耀	gjyj
-供应量	gjyl
 供应链	gjyl
+供应量	gjyl
 国际舆论	gjyl
 供养	gjym
 光影	gjyr
@@ -50463,7 +50463,6 @@ GPRS	gprs
 寂	jny
 加压	jnya
 惊异	jnyb
-加一点	jnyd
 加油	jnyd
 举要	jnyf
 惊艳	jnyg
@@ -52368,14 +52367,14 @@ GPRS	gprs
 角度	jwdh
 解冻	jwdh
 °	jwdh
-几丁质	jwdi
 几点钟	jwdi
 急跌	jwdi
+几丁质	jwdi
 几代	jwdj
 降维打击	jwdj
 急得	jwdk
-角动量	jwdl
 解读	jwdl
+角动量	jwdl
 久闻大名	jwdm
 祭奠	jwdm
 角斗	jwdn
@@ -52385,8 +52384,8 @@ GPRS	gprs
 几段	jwdr
 居无定所	jwds
 角斗士	jwds
-久等	jwdt
 解答	jwdt
+久等	jwdt
 几多	jwdw
 几点	jwdy
 句点	jwdy
@@ -52419,7 +52418,6 @@ GPRS	gprs
 角分线	jwfx
 几分钟	jwfz
 祭	jwg
-几根	jwgc
 及格	jwgc
 极为尴尬	jwgg
 几个字	jwgi
@@ -68422,6 +68420,7 @@ GPRS	gprs
 内河航运	nhhy
 凝滞	nhid
 南海诸岛	nhid
+凝珠	nhig
 怒火中烧	nhis
 凝重	nhit
 凝脂	nhiv
@@ -68466,6 +68465,7 @@ GPRS	gprs
 那还用说	nhys
 凝滞	nhzd
 南海诸岛	nhzd
+凝珠	nhzg
 怒火中烧	nhzs
 凝重	nhzt
 凝脂	nhzv
@@ -128827,6 +128827,7 @@ Z	vyz
 王守仁	wgsr
 五光十色	wgss
 无私	wgst
+武士	wgsu
 无声	wgsu
 王孙	wgsv
 无所谓	wgsw
@@ -142509,9 +142510,9 @@ Z	vyz
 音乐厅	yhyt
 音域	yhyu
 夜月	yhyv
+音乐	yhyw
 应用	yhyw
 应用文	yhyw
-音乐	yhyw
 应验	yhyx
 应用于	yhyy
 又红又专	yhyz
