--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -861,6 +861,7 @@ CPU	cpu
 肮脏	aviv
 腌臜	aviv
 阿姐	avjs
+阿胶	avjv
 隘口	avki
 阿克苏	avks
 阿拉伯	avlb
@@ -2283,8 +2284,8 @@ CPU	cpu
 勃然	bfrv
 勃然	bfrw
 本硕	bfsa
-不分胜负	bfsf
 本事	bfsf
+不分胜负	bfsf
 不负韶华	bfsh
 博士后	bfsh
 本社	bfsl
@@ -7418,6 +7419,7 @@ bilibili	blbl
 残基	cajf
 成就感	cajg
 成交	cajh
+成就	cajh
 残疾	cajh
 成交价	cajj
 成交量	cajl
@@ -10735,8 +10737,8 @@ bilibili	blbl
 采到	cmds
 粗短	cmdt
 彩蛋	cmdv
-差得远	cmdy
 差点	cmdy
+差得远	cmdy
 差额	cmen
 侧目而视	cmes
 差	cmf
@@ -11840,8 +11842,8 @@ bilibili	blbl
 车检	csjc
 车架号	csjh
 车距	csji
-常胜将军	csjj
 车间	csjj
+常胜将军	csjj
 车技	csjk
 崇山峻岭	csjl
 车驾	csjn
@@ -17323,6 +17325,7 @@ bilibili	blbl
 大连晚报	dlwb
 祷文	dlwh
 襜	dlwh
+对味	dlwi
 对位	dlwj
 诋	dlwk
 祋	dlwl
@@ -17464,6 +17467,7 @@ bilibili	blbl
 吊民伐罪	dmfi
 兑付	dmfj
 单放机	dmfj
+单方面	dmfm
 单发	dmfn
 单飞	dmfn
 单幅	dmfo
@@ -18875,8 +18879,8 @@ bilibili	blbl
 笃厚	dtha
 等会儿	dthe
 等号	dthi
-等会	dthj
 等候	dthj
+等会	dthj
 答话	dthl
 敌害	dthn
 敌后	dthq
@@ -22147,6 +22151,7 @@ bilibili	blbl
 痱子	fhiv
 放纵	fhix
 方针	fhiy
+废止	fhiy
 腐殖质	fhiz
 府	fhj
 发汗解表	fhjb
@@ -26878,10 +26883,10 @@ bilibili	blbl
 工人党	gfrd
 共荣	gfre
 过日子	gfri
-古人	gfrj
 工人	gfrj
 故人	gfrj
 过人	gfrj
+古人	gfrj
 过热	gfrk
 古人类	gfrl
 攻入	gfrm
@@ -30896,8 +30901,8 @@ GPRS	gprs
 过意不去	gybq
 锅包肉	gybr
 钢笔水	gybs
-各有不同	gybt
 钢笔	gybt
+各有不同	gybt
 过意不去	gybu
 锅巴	gybv
 钢包	gybw
@@ -31811,6 +31816,7 @@ GPRS	gprs
 浩瀚	hdhd
 海涵	hdhd
 混混	hdhd
+洪湖	hdhd
 洪荒	hdhe
 濠	hdhi
 活化剂	hdhj
@@ -32055,6 +32061,8 @@ GPRS	gprs
 洪水	hdsd
 海水	hdsd
 湖水	hdsd
+汗水	hdsd
+汉水	hdsd
 华东师范	hdsf
 涣散	hdsf
 滑石粉	hdsf
@@ -33604,6 +33612,7 @@ GPRS	gprs
 化境	hjju
 合脚	hjjv
 化解	hjjw
+何解	hjjw
 合金	hjjy
 讳疾忌医	hjjy
 货架	hjjz
@@ -42644,24 +42653,22 @@ GPRS	gprs
 追债	irij
 重任在肩	irij
 自找	irik
-知人之明	irim
 自尊	irim
 自助	irio
-自主权	iriq
 自治区	iriq
+自主权	iriq
 最早	irir
-做人做事	iris
 真人真事	iris
 自转	iris
-自制	irit
 自知	irit
 自重	irit
-自主权	iriu
+自制	irit
 自治区	iriu
+自主权	iriu
 早中晚	iriw
 最终	irix
-知人知面不知心	irix
 自尊心	irix
+知人知面不知心	irix
 追歼	irja
 自己	irjb
 自居	irjb
@@ -42961,10 +42968,7 @@ GPRS	gprs
 追债	irzj
 重任在肩	irzj
 自找	irzk
-照着	irzm
-知人之明	irzm
 自尊	irzm
-追着	irzm
 自助	irzo
 追赃	irzo
 追赠	irzo
@@ -44742,6 +44746,7 @@ GPRS	gprs
 绽出	ixcv
 真心诚意	ixcy
 纸钞	ixcy
+真相大白	ixdb
 宰相肚里能撑船	ixdc
 周旋到底	ixdd
 纸带	ixdf
@@ -46009,6 +46014,7 @@ GPRS	gprs
 机关报	jcgb
 极个别	jcgb
 机构	jcgc
+机柜	jcgc
 机工	jcgf
 机耕	jcgg
 极高	jcgh
@@ -46133,7 +46139,6 @@ GPRS	gprs
 机枪	jcqc
 机巧	jcqf
 极其	jcqf
-基层群众	jcqi
 机器	jcqi
 杰出青年	jcqn
 极圈	jcqo
@@ -46195,7 +46200,6 @@ GPRS	gprs
 机枪	jcuc
 机巧	jcuf
 极其	jcuf
-基层群众	jcui
 机器	jcui
 桔	jcui
 杰出青年	jcun
@@ -55571,7 +55575,6 @@ GPRS	gprs
 扣紧	kkju
 扣缴	kkjx
 看开	kkkg
-坎坎坷坷	kkkk
 看看	kkkk
 可口可乐	kkkl
 看客	kkkn
@@ -56075,9 +56078,9 @@ GPRS	gprs
 客机	knjc
 快进	knjg
 愧疚	knjh
-快节奏	knji
-空架子	knji
 空间站	knji
+空架子	knji
+快节奏	knji
 快捷键	knjj
 空间	knjj
 快件	knjj
@@ -56094,9 +56097,9 @@ GPRS	gprs
 空际	knjv
 空降	knjv
 宽解	knjw
-快节奏	knjz
-空架子	knjz
 空间站	knjz
+空架子	knjz
+快节奏	knjz
 空库	knkh
 空口	knki
 宽阔	knkj
@@ -57812,8 +57815,8 @@ GPRS	gprs
 领导成员	ldcy
 溜达	ldda
 流弹	lddb
-泪滴	lddd
 漏洞	lddd
+泪滴	lddd
 浪荡	ldde
 流动	lddg
 流动站	lddi
@@ -62301,9 +62304,8 @@ GPRS	gprs
 留声机	lwsj
 猎手	lwsk
 留神	lwsl
-临危受命	lwsm
-临危授命	lwsm
 猎杀	lwsm
+临危受命	lwsm
 留守	lwsn
 留宿	lwsn
 乐山	lwso
@@ -63700,7 +63702,6 @@ GPRS	gprs
 没见	mdjo
 忙得脚打后脑勺	mdjs
 没几天	mdjt
-没经	mdjx
 灭绝	mdjx
 没加	mdjz
 没看到	mdkd
@@ -69090,8 +69091,8 @@ GPRS	gprs
 努力拓宽	nltk
 难逃	nltm
 农田	nlto
-年老体弱	nltr
 难题	nltr
+年老体弱	nltr
 年老体衰	nlts
 难脱	nltv
 难求	nluf
@@ -98381,8 +98382,6 @@ GPRS	gprs
 排斥	pkcq
 捧场	pkcu
 排场	pkcu
-抛出	pkcv
-拍出	pkcv
 排除	pkcv
 拼错	pkcy
 拍电报	pkdb
@@ -104832,11 +104831,10 @@ QQ密码	qqmm
 起算	qust
 去收	qusv
 起色	qusw
+墙上	qusy
 七窍生烟	qusy
 倾其所有	qusy
-墙上	qusy
 窃窃私语	qusy
-起酥油	qusy
 罄	qut
 墙头草	qutc
 去痛	quth
@@ -108195,8 +108193,8 @@ QQ密码	qqmm
 殊	satk
 石台	satl
 砂糖	satm
-殇	satn
 石头	satn
+殇	satn
 石炭	sato
 砂土	satu
 死胎	satv
@@ -111909,8 +111907,8 @@ QQ密码	qqmm
 顺流而下	slex
 谌	slf
 谌	slfc
-设法	slfd
 说法	slfd
+设法	slfd
 神甫	slff
 双方	slfh
 双份	slfj
@@ -114168,8 +114166,8 @@ QQ密码	qqmm
 顺	sraj
 晟	srak
 鼠标	srbc
-杀人不过头点地	srbd
 鼠标垫	srbd
+杀人不过头点地	srbd
 顺变	srbh
 是吧	srbi
 损人不利己	srbj
@@ -114871,6 +114869,7 @@ QQ密码	qqmm
 生存	stca
 生辰	stca
 稍迟	stcb
+筛查	stcc
 生产队	stcd
 笥	stcd
 剩菜	stce
@@ -117373,9 +117372,9 @@ QQ密码	qqmm
 退下	tbxf
 退休费	tbxf
 退席	tbxh
-同比下降	tbxj
 退休	tbxj
 退休金	tbxj
+同比下降	tbxj
 退行	tbxk
 同病相怜	tbxl
 退下来	tbxl
@@ -119313,6 +119312,7 @@ QQ密码	qqmm
 托克维尔	tkwe
 痛苦万分	tkwf
 探望	tkwh
+投喂	tkwi
 提问	tkwj
 摊位	tkwj
 探微	tkwk
@@ -119483,17 +119483,16 @@ QQ密码	qqmm
 讨还	tlha
 台海	tlhd
 偷梁换柱	tlhi
+通货	tlhj
 调合	tlhj
 通化	tlhj
-通货	tlhj
 袒护	tlhk
-谈话	tlhl
 通话	tlhl
+谈话	tlhl
 讨回	tlho
 通航	tlhq
-褪黑素	tlhs
 讨好	tlhs
-谈婚	tlhs
+褪黑素	tlhs
 调和	tlht
 同流合污	tlhw
 通红	tlhx
@@ -126475,11 +126474,10 @@ QQ密码	uumm
 起算	uust
 去收	uusv
 起色	uusw
+墙上	uusy
 七窍生烟	uusy
 倾其所有	uusy
-墙上	uusy
 窃窃私语	uusy
-起酥油	uusy
 娶妻生子	uusz
 罄	uut
 墙头草	uutc
@@ -128709,14 +128707,13 @@ Z	vyz
 无垠	wgyu
 无官一身轻	wgyu
 无疑	wgyw
-无缘	wgyx
-玩游戏	wgyx
 违约	wgyx
-无异于	wgyy
+无缘	wgyx
 无意义	wgyy
+无异于	wgyy
+无意中	wgyz
 无原则	wgyz
 无影踪	wgyz
-无意中	wgyz
 物归原主	wgyz
 未在	wgza
 武装部	wgzb
@@ -128896,7 +128893,6 @@ Z	vyz
 五黄六月	whly
 文	whm
 文明办	whmb
-文明号	whmh
 文盲	whmh
 雾霾	whmh
 亡命	whmj
@@ -128933,8 +128929,8 @@ Z	vyz
 文殊	whsa
 雾水	whsd
 文史馆	whsg
-五湖四海	whsh
 雾凇	whsh
+五湖四海	whsh
 文史哲	whsi
 文史类	whsl
 瘟神	whsl
@@ -131434,9 +131430,9 @@ Z	vyz
 玩物丧志	wwsi
 乌苏里江	wwsj
 外伤	wwsj
+外设	wwsl
 乌苏里	wwsl
 乌鞘岭	wwsl
-外设	wwsl
 乌纱帽	wwsm
 务实	wwsn
 外孙女	wwsn
@@ -133265,6 +133261,7 @@ Z	vyz
 下脚料	xfjl
 下卷	xfjm
 下架	xfjn
+下家	xfjn
 鞋架	xfjn
 下贱	xfjo
 下嫁	xfjs
@@ -133731,8 +133728,8 @@ Z	vyz
 絜	xgxp
 下个星期	xgxq
 下个星期	xgxu
-现象	xgxw
 形象	xgxw
+现象	xgxw
 现象学	xgxx
 狭管效应	xgxy
 现有	xgya
@@ -134520,12 +134517,12 @@ Z	vyz
 闲逛	xjgw
 信	xjh
 仙鹤草	xjhc
-信号弹	xjhd
 信号灯	xjhd
-仙后座	xjhi
-信	xjhi
+信号弹	xjhd
 信号	xjhi
 儴	xjhi
+信	xjhi
+仙后座	xjhi
 休会	xjhj
 相煎何急	xjhj
 侠	xjhk
@@ -134876,6 +134873,7 @@ Z	vyz
 携带者	xkdi
 掀倒	xkdj
 掀掉	xkdk
+行动力	xkdl
 行道	xkdm
 学科带头人	xkdr
 行动上	xkds
@@ -140166,11 +140164,9 @@ Z	vyz
 一肚子气	ydiq
 渔舟	ydiq
 源自	ydir
-一代宗师	ydis
-一直是	ydis
-一站式	ydis
 一致	ydis
-一转身	ydis
+一代宗师	ydis
+一站式	ydis
 一整天	ydit
 一整套	ydit
 一种	ydit
@@ -142768,10 +142764,8 @@ Z	vyz
 一件事情	yjsq
 依顺	yjsr
 偃	yjsr
-一介书生	yjss
 仪式	yjss
 伊始	yjss
-硬件设施	yjss
 余生	yjst
 一件事情	yjsu
 优胜	yjsv
@@ -142880,13 +142874,13 @@ Z	vyz
 耀眼	yjyo
 业精于勤	yjyq
 悠悠然	yjyr
-云卷云舒	yjys
 优雅	yjys
 余姚	yjys
+云卷云舒	yjys
 拥军优属	yjys
-业精于勤	yjyu
 优越	yjyu
 逾越	yjyu
+业精于勤	yjyu
 优越性	yjyx
 又惊又喜	yjyx
 衣锦夜行	yjyx
@@ -143971,9 +143965,9 @@ Z	vyz
 鹞	ymwd
 鹢	ymwd
 羽毛未丰	ymwf
-一命呜呼	ymwh
 欲望	ymwh
 烟雾	ymwh
+一命呜呼	ymwh
 㶲	ymwi
 愚昧无知	ymwi
 烟味	ymwi
@@ -144223,7 +144217,6 @@ Z	vyz
 忧郁症	ynyi
 盈余	ynyj
 寓义	ynym
-一男一女	ynyn
 愉悦	ynyn
 盈盈	ynyn
 延年益寿	ynys
@@ -146608,9 +146601,9 @@ Z	vyz
 怨恨	ywhn
 用后	ywhq
 用户群	ywhq
+疑惑	ywhs
 印花税	ywhs
 用户数	ywhs
-疑惑	ywhs
 用户群	ywhu
 猿猴	ywhw
 以文会友	ywhy
@@ -153180,37 +153173,28 @@ Z	vyz
 追债	zrij
 重任在肩	zrij
 自找	zrik
-照着	zrim
-知人之明	zrim
 自尊	zrim
-追着	zrim
 自助	zrio
 追赃	zrio
 追赠	zrio
-自主权	zriq
 自治区	zriq
-早早	zrir
-昭昭	zrir
+自主权	zriq
 最早	zrir
-最最	zrir
-做人做事	zris
+昭昭	zrir
 真人真事	zris
 自转	zris
-早知	zrit
-自制	zrit
 自知	zrit
-自造	zrit
 自重	zrit
-早走	zriu
+自制	zrit
 自主权	zriu
 自治区	zriu
 早中晚	zriw
 最终	zrix
-知人知面不知心	zrix
 自尊心	zrix
+知人知面不知心	zrix
 追歼	zrja
-自居	zrjb
 自己	zrjb
+自居	zrjb
 自检	zrjc
 自荐	zrje
 自救	zrjf
@@ -153504,21 +153488,20 @@ Z	vyz
 知人之明	zrzm
 自尊	zrzm
 自助	zrzo
-自主权	zrzq
 自治区	zrzq
+自主权	zrzq
 最早	zrzr
-做人做事	zrzs
 真人真事	zrzs
 自转	zrzs
-自制	zrzt
-自知	zrzt
 自重	zrzt
-自主权	zrzu
+自知	zrzt
+自制	zrzt
 自治区	zrzu
+自主权	zrzu
 早中晚	zrzw
 最终	zrzx
-知人知面不知心	zrzx
 自尊心	zrzx
+知人知面不知心	zrzx
 自治州	zrzz
 转	zs
 至	zs
@@ -155291,6 +155274,7 @@ Z	vyz
 绽出	zxcv
 真心诚意	zxcy
 纸钞	zxcy
+真相大白	zxdb
 宰相肚里能撑船	zxdc
 周旋到底	zxdd
 纸带	zxdf
