20240620-230155：增加fcitx5.custom.yaml。并改词。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -4953,6 +4953,8 @@ bilibili	blbl
 办年货	bnnh
 悖逆	bnnm
 边	bnnn
+𰻝	bnnn
+𰻞	bnnn
 百年难遇	bnny
 宝瓶座	bnpi
 宾朋	bnpv
@@ -10130,6 +10132,7 @@ bilibili	blbl
 抽筋	ckjt
 挫	ckju
 持久	ckjw
+拆解	ckjw
 持久性	ckjx
 持久战	ckjz
 彳	ckk
@@ -12755,6 +12758,7 @@ bilibili	blbl
 出错率	cvcl
 陈词	cvcl
 出差	cvcm
+出彩	cvcm
 除虫	cvco
 除尘	cvcp
 出舱	cvcq
@@ -14202,12 +14206,12 @@ bilibili	blbl
 大炮	dapm
 大盘	dapq
 大牌	dapr
+大片	dapr
 碟片	dapr
 大鹏	dapv
 大平原	dapy
 大碰撞	dapz
 大群	daqb
-大权	daqc
 大桥	daqc
 大气层	daqc
 夺权	daqc
@@ -20414,6 +20418,7 @@ bilibili	blbl
 屙	eb
 耳鼻喉科	ebhk
 二八佳人	ebjr
+屙屎	ebsb
 二笔输入法	ebsf
 耳鬓厮磨	ebsm
 耳边响起	ebxq
@@ -60214,6 +60219,7 @@ GPRS	gprs
 拉平	lkph
 拉偏架	lkpj
 拉皮	lkpn
+拉片	lkpr
 拉皮条	lkpt
 拉皮	lkpz
 揽权	lkqc
@@ -80329,6 +80335,7 @@ GPRS	gprs
 蹠	oihf
 蹢	oihf
 嗙	oihh
+哦嚯	oihi
 呯	oihi
 唁	oihi
 啍	oihi
@@ -80359,6 +80366,7 @@ GPRS	gprs
 跤	oihm
 蹠	oihm
 躋	oihm
+哦豁	oihn
 啼	oiho
 嗃	oiho
 噇	oiho
@@ -86134,6 +86142,8 @@ GPRS	gprs
 逮	onnn
 邃	onnn
 飝	onnn
+𰻝	onnn
+𰻞	onnn
 悺	onno
 懧	onno
 愶	onnv
@@ -102207,8 +102217,8 @@ GPRS	gprs
 全称	qjct
 全程	qjct
 全长	qjct
-倾城	qjcu
 全场	qjcu
+倾城	qjcu
 倾巢	qjcx
 全错	qjcy
 侵夺	qjda
@@ -107151,6 +107161,7 @@ QQ密码	qqmm
 日杂	rriw
 日终	rrix
 日止	rriy
+日剧	rrjb
 日记本	rrjb
 日渐	rrjd
 日进	rrjg
@@ -115290,6 +115301,7 @@ QQ密码	qqmm
 水天一色	stys
 算一算	stys
 失业	styu
+私盐	styu
 私有权	styu
 私隐	styv
 适用	styw
@@ -119158,8 +119170,8 @@ QQ密码	qqmm
 抬	tkl
 探	tklc
 徒劳	tkle
-塔克拉玛干	tklg
 推理	tklg
+塔克拉玛干	tklg
 挺立	tklh
 捅娄子	tkli
 探路	tkli
@@ -119270,9 +119282,9 @@ QQ密码	qqmm
 投射	tksr
 投诉人	tksr
 痛哭失声	tkss
-抬升	tkst
-推算	tkst
 提升	tkst
+推算	tkst
+抬升	tkst
 托腮	tksv
 投书	tksx
 投身于	tksy
@@ -123960,8 +123972,8 @@ QQ密码	qqmm
 全称	ujct
 全程	ujct
 全长	ujct
-倾城	ujcu
 全场	ujcu
+倾城	ujcu
 倾巢	ujcx
 全错	ujcy
 侵夺	ujda
@@ -128606,6 +128618,7 @@ Z	vyz
 无权	wguc
 无穷大	wgud
 无期	wguf
+无趣	wguf
 玩球	wgug
 位高权重	wgui
 武器	wgui
@@ -133279,13 +133292,11 @@ Z	vyz
 下课后	xfkh
 西康	xfkh
 巷口	xfki
-消防控制	xfki
 鞋扣	xfkk
 下课	xfkl
 下课铃	xfkl
 西裤	xfkl
 下款	xfku
-消防控制	xfkz
 下列	xfla
 下楼	xflc
 下流	xfld
@@ -133293,15 +133304,14 @@ Z	vyz
 下联	xflf
 协理	xflg
 下来	xflh
-西凉	xflh
 醒来	xflh
+西凉	xflh
 西路	xfli
 下令	xflj
 下拉	xflk
 献礼	xfll
 鞋类	xflm
 协力	xfln
-消费理念	xfln
 下利	xflt
 下了	xflv
 醒了	xflv
@@ -134675,6 +134685,7 @@ Z	vyz
 心急如火	xjrh
 仙人掌	xjri
 信任	xjrj
+仙人	xjrj
 闲人	xjrj
 仙人球	xjrq
 心惊肉跳	xjrt
@@ -138949,7 +138960,6 @@ Z	vyz
 硬核	yahc
 硬汉	yahd
 硬汉子	yahi
-有何	yahj
 硬化	yahj
 硬环境	yahj
 硬撼	yahk
@@ -141625,8 +141635,8 @@ Z	vyz
 元	ygww
 运维	ygwx
 玉溪	ygxd
-云霄	ygxh
 云霞	ygxh
+云霄	ygxh
 元勋	ygxi
 元宵节	ygxj
 运行	ygxk
@@ -141636,15 +141646,13 @@ Z	vyz
 艳星	ygxr
 玉玺	ygxw
 远销	ygxy
-云涌	ygyd
-云游	ygyd
-眼高于顶	ygyd
 远洋	ygyd
+云游	ygyd
 远游	ygyd
+眼高于顶	ygyd
 运营	ygye
 云雨	ygyf
 元月份	ygyf
-应该应分	ygyf
 云云	ygyg
 远远	ygyg
 元音	ygyh
@@ -141656,14 +141664,13 @@ Z	vyz
 忧国忧民	ygym
 艳遇	ygyo
 云影	ygyr
-于一身	ygys
-愚公移山	ygys
 运营商	ygys
+愚公移山	ygys
 艳阳天	ygyt
-元月	ygyv
 艳阳	ygyv
-莺歌燕舞	ygyw
+元月	ygyv
 运用	ygyw
+莺歌燕舞	ygyw
 运用于	ygyy
 元宇宙	ygyz
 远在	ygza
@@ -141682,8 +141689,8 @@ Z	vyz
 云中	ygzo
 一鼓作气	ygzq
 玉照	ygzr
-一棍子打死	ygzs
 运转	ygzs
+一棍子打死	ygzs
 玉竹	ygzt
 一鼓作气	ygzu
 远走	ygzu
@@ -141703,17 +141710,15 @@ Z	vyz
 庸	yhb
 亦不	yhba
 庸	yhbb
-言必称	yhbc
 音标	yhbc
 夜泊	yhbd
 夜班	yhbg
-一好百好	yhbh
 应变	yhbh
 疫病	yhbh
 癔病	yhbh
+一好百好	yhbh
 烟花爆竹	yhbi
 疑惑不解	yhbj
-应把	yhbk
 有何不可	yhbk
 亦被	yhbl
 夜半	yhbm
@@ -141722,8 +141727,8 @@ Z	vyz
 阴魂不散	yhbs
 有何不同	yhbt
 言必信	yhbx
-一呼百应	yhby
 衣钵	yhby
+一呼百应	yhby
 烟花爆竹	yhbz
 育成	yhca
 衣橱	yhcc
