--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -4404,9 +4404,9 @@ bilibili	blbl
 必争	blzw
 补缀	blzx
 被占	blzy
-八	bm
 并	bm
 半	bm
+八	bm
 弊	bma
 弊	bmai
 颁	bmaj
@@ -4646,7 +4646,6 @@ bilibili	blbl
 爆破筒	bmpt
 爆脾气	bmpu
 爆破音	bmpy
-八强	bmqb
 憋屈	bmqb
 半期	bmqf
 半球	bmqg
@@ -4702,7 +4701,6 @@ bilibili	blbl
 爆胎	bmtv
 半条	bmtw
 坌	bmu
-八强	bmub
 憋屈	bmub
 半期	bmuf
 半球	bmug
@@ -8420,8 +8418,8 @@ bilibili	blbl
 草样	ceyc
 茶叶蛋	ceyd
 菜油	ceyd
-茶艺	ceye
 草药	ceye
+茶艺	ceye
 藏于	ceyg
 苍鹰	ceyh
 茶叶	ceyi
@@ -26867,8 +26865,8 @@ bilibili	blbl
 过频	gfpy
 更强	gfqb
 过桥	gfqc
-工期	gfqf
 过期	gfqf
+工期	gfqf
 古琴	gfqg
 共庆	gfqh
 各负其责	gfqi
@@ -58784,15 +58782,13 @@ GPRS	gprs
 老	lfww
 鬣	lfx
 两厢	lfxa
-老朽	lfxc
 联想	lfxc
-联想到	lfxd
-联系点	lfxd
+老朽	lfxc
 联系	lfxe
 联席	lfxh
 联席会	lfxh
-两下子	lfxi
 老兄	lfxi
+两下子	lfxi
 老学究	lfxj
 两性	lfxn
 鬣	lfxo
@@ -58802,8 +58798,8 @@ GPRS	gprs
 老相识	lfxs
 联想起	lfxu
 联系	lfxw
-凉风习习	lfxx
 老乡	lfxx
+凉风习习	lfxx
 两相宜	lfxy
 两下子	lfxz
 老友	lfya
@@ -58820,7 +58816,6 @@ GPRS	gprs
 老爷子	lfyi
 两亿	lfyj
 两翼	lfyl
-聊一聊	lfyl
 聊以	lfyl
 赖以	lfyl
 老爷	lfym
@@ -58834,19 +58829,18 @@ GPRS	gprs
 老幺	lfyx
 老幼	lfyx
 老爷爷	lfyy
-老样子	lfyz
 老爷子	lfyz
+老样子	lfyz
 勒	lfz
 赖在	lfza
 两张	lfzb
-两者都	lfzd
 吏治	lfzd
 来犯之敌	lfzd
 两者	lfzf
 老资格	lfzg
+聊斋	lfzh
 老字号	lfzh
 老庄	lfzh
-聊斋	lfzh
 两只	lfzi
 联众	lfzj
 老挝	lfzk
@@ -58856,7 +58850,6 @@ GPRS	gprs
 醪糟	lfzm
 两字	lfzn
 赖账	lfzo
-两张皮	lfzp
 老照片	lfzp
 老中青	lfzq
 联轴器	lfzq
@@ -60479,9 +60472,9 @@ GPRS	gprs
 累累硕果	llsg
 礼俗	llsj
 朗朗上口	llsk
-琅琅上口	llsk
 朗诵	llsl
 礼数	llsm
+良善	llsm
 裢	llsn
 良师	llsp
 裸鼠	llsr
@@ -60491,7 +60484,6 @@ GPRS	gprs
 啰啰嗦嗦	llss
 懒懒散散	llss
 论述题	llst
-朗声	llsu
 礼堂	lltj
 裸体	lltj
 良田	llto
@@ -98672,6 +98664,7 @@ GPRS	gprs
 拼争	pkzw
 评	pl
 袢	pl
+中国人民解放军	pla
 评比	plbs
 襻	plc
 襻	plca
@@ -101234,9 +101227,9 @@ GPRS	gprs
 取给	qfgx
 裘	qfh
 气氛很好	qfhh
-前赴后继	qfhj
 巧合	qfhj
 期货	qfhj
+前赴后继	qfhj
 勤换	qfhk
 裘	qfhk
 求欢	qfhl
@@ -109784,7 +109777,7 @@ QQ密码	qqmm
 索然	sfrw
 世风日下	sfrx
 酸爽	sfsa
-散散步	sfsb
+丧尸	sfsb
 酥松	sfsc
 散沙	sfsd
 酸涩	sfsd
@@ -111230,7 +111223,6 @@ QQ密码	qqmm
 四季如春	sjrc
 生津润燥	sjri
 伤人	sjrj
-使人	sjrj
 僧人	sjrj
 伸入	sjrm
 食肉	sjro
@@ -111242,7 +111234,6 @@ QQ密码	qqmm
 生津润燥	sjrz
 舒爽	sjsa
 尚属	sjsb
-似水	sjsd
 随叫随到	sjsd
 俗世	sjsf
 傻事	sjsf
@@ -123003,9 +122994,9 @@ QQ密码	qqmm
 取给	ufgx
 裘	ufh
 气氛很好	ufhh
-前赴后继	ufhj
 巧合	ufhj
 期货	ufhj
+前赴后继	ufhj
 裘	ufhk
 求欢	ufhl
 取火	ufhm
@@ -126187,7 +126178,6 @@ QQ密码	qqmm
 迁往	utwk
 前途无量	utwl
 签完	utwn
-前天晚上	utws
 千万	utws
 千瓦	utws
 千瓦时	utws
@@ -135478,6 +135468,7 @@ Z	vyz
 心意	xlyh
 谐音	xlyh
 谢意	xlyh
+写意	xlyh
 训喻	xlyi
 心仪	xlyj
 习语	xlyl
@@ -140390,9 +140381,8 @@ Z	vyz
 一俟	ydqj
 一拳	ydqm
 一曲	ydqo
-一群人	ydqr
-涌泉	ydqr
 源泉	ydqr
+一群人	ydqr
 一切	ydqs
 油气	ydqt
 油气田	ydqt
@@ -140492,9 +140482,8 @@ Z	vyz
 一俟	yduj
 一拳	ydum
 一曲	yduo
-一群人	ydur
-涌泉	ydur
 源泉	ydur
+一群人	ydur
 一切	ydus
 渔区	ydus
 油气	ydut
