20240621-231256：同步哲豆0621更新内容，增加biangbiang面。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -4822,6 +4822,8 @@ bilibili	blbl
 办班	bnbg
 不能保证	bnbi
 办报	bnbk
+𰻝𰻝面	bnbm
+𰻞𰻞面	bnbm
 宝宝	bnbn
 不男不女	bnbn
 宝贝	bnbo
@@ -5841,10 +5843,9 @@ bilibili	blbl
 毕业班	bsyb
 不善言辞	bsyc
 比亚迪	bsyd
-别树一帜	bsyi
 比喻	bsyi
-毕业照	bsyi
 毕业证	bsyi
+毕业照	bsyi
 背水一战	bsyi
 冰山一角	bsyj
 榜上有名	bsym
@@ -5854,8 +5855,8 @@ bilibili	blbl
 巴山夜雨	bsyy
 败事有余	bsyy
 别树一帜	bsyz
-毕业照	bsyz
 毕业证	bsyz
+毕业照	bsyz
 背水一战	bsyz
 不施脂粉	bszf
 不世之功	bszg
@@ -8368,6 +8369,7 @@ bilibili	blbl
 藏身	cesr
 菜式	cess
 苍生	cest
+藏私	cest
 苍孙	cesv
 菜色	cesw
 草书	cesx
@@ -15983,6 +15985,7 @@ bilibili	blbl
 带状疱疹	dipi
 地转偏向力	dipl
 吊瓶	dipm
+吊牌	dipr
 地藏菩萨	dips
 吊桥	diqc
 大众汽车	diqc
@@ -19998,6 +20001,7 @@ bilibili	blbl
 点赞	dyit
 锻造	dyit
 大雅之堂	dyit
+钉子	dyiv
 点子	dyiv
 点阵	dyiv
 大有作为	dyiw
@@ -23269,6 +23273,7 @@ bilibili	blbl
 烽	fmw
 父王	fmwg
 分文	fmwh
+番位	fmwj
 分为	fmwm
 分完	fmwn
 翻胃	fmwo
@@ -36810,7 +36815,7 @@ GPRS	gprs
 绘图	hxto
 红塔山	hxts
 红彤彤	hxtt
-红透	hxtt
+红毯	hxtt
 红土	hxtu
 红彤	hxtw
 横行天下	hxtx
@@ -42730,6 +42735,7 @@ GPRS	gprs
 自力	irln
 最累	irlo
 自来水	irls
+自来熟	irls
 自利	irlt
 自留	irlw
 自力	irlz
@@ -44016,6 +44022,7 @@ GPRS	gprs
 走近	iujq
 证券交易所	iujs
 趑趄	iuju
+增肌	iujv
 证券交易	iujy
 增加	iujz
 走开	iukg
@@ -45684,8 +45691,8 @@ GPRS	gprs
 居住区	jbiu
 剧增	jbiu
 君子	jbiv
-剧终	jbix
 剧组	jbix
+剧终	jbix
 加班加点	jbjd
 即将	jbjh
 建交	jbjh
@@ -45914,8 +45921,8 @@ GPRS	gprs
 剧增	jbzu
 居住区	jbzu
 君子	jbzv
-剧组	jbzx
 剧终	jbzx
+剧组	jbzx
 剧作者	jbzz
 君主制	jbzz
 机	jc
@@ -47786,6 +47793,7 @@ GPRS	gprs
 夹竹桃	jhit
 净增	jhiu
 夹子	jhiv
+减脂	jhiv
 竞争	jhiw
 竞	jhiw
 交织	jhix
@@ -48030,8 +48038,8 @@ GPRS	gprs
 江河行地	jhxd
 浆洗	jhxd
 减薪	jhxe
-借花献佛	jhxf
 奖项	jhxf
+借花献佛	jhxf
 减刑	jhxg
 积毁销骨	jhxg
 夹雪	jhxh
@@ -48114,6 +48122,7 @@ GPRS	gprs
 夹竹桃	jhzt
 净增	jhzu
 夹子	jhzv
+减脂	jhzv
 竞争	jhzw
 交织	jhzx
 决战	jhzy
@@ -48764,7 +48773,7 @@ GPRS	gprs
 集团军	jjtj
 假托	jjtk
 健谈	jjtl
-近几天来	jjtl
+焦糖	jjtm
 剑突	jjtn
 集团	jjto
 借题	jjtr
@@ -48986,6 +48995,7 @@ GPRS	gprs
 挤	jkh
 接合部	jkhb
 接活	jkhd
+搅黄	jkhf
 接合	jkhj
 挟	jkhk
 接话	jkhl
@@ -50259,6 +50269,7 @@ GPRS	gprs
 锦囊妙计	jnmj
 家门口	jnmk
 寂寞	jnmn
+加密	jnmn
 俊男美女	jnmn
 加冕	jnmo
 加盟	jnmr
@@ -52544,6 +52555,7 @@ GPRS	gprs
 解谜	jwml
 灸	jwmm
 急忙	jwmn
+解密	jwmn
 解码器	jwmq
 几秒	jwmt
 解码器	jwmu
@@ -52979,6 +52991,7 @@ GPRS	gprs
 经久	jxjw
 绝句	jxjw
 纠结	jxjx
+经纪	jxjx
 将信将疑	jxjy
 渐行渐远	jxjy
 绞架	jxjz
@@ -54585,6 +54598,7 @@ GPRS	gprs
 可循	kfxk
 可信赖	kfxl
 可心	kfxl
+酷炫	kfxm
 可惜	kfxn
 可向	kfxr
 可先	kfxt
@@ -65587,11 +65601,10 @@ GPRS	gprs
 美术馆	mmsg
 米市	mmsh
 美术字	mmsi
-美术家	mmsj
+貌似	mmsj
 美食	mmsj
 美食家	mmsj
 觅食	mmsj
-貌似	mmsj
 明眸善睐	mmsl
 美神	mmsl
 美少女	mmsn
@@ -65780,6 +65793,7 @@ GPRS	gprs
 密集型	mnjx
 慢镜	mnjy
 模拟考场	mnkc
+密	mnl
 宓	mnl
 忙碌	mnla
 密林	mnlc
@@ -65788,6 +65802,7 @@ GPRS	gprs
 宓	mnlk
 木牛流马	mnlm
 蜜蜡	mnlo
+密	mnlo
 母女两人	mnlr
 蒙娜丽莎	mnls
 忙乱	mnlt
@@ -100594,8 +100609,8 @@ GPRS	gprs
 强词夺理	qcdl
 棋道	qcdm
 气冲斗牛	qcdn
-奇耻大辱	qcdr
 桥段	qcdr
+奇耻大辱	qcdr
 气沉丹田	qcdt
 桥墩	qcdu
 七彩丹霞	qcdx
@@ -103411,6 +103426,7 @@ GPRS	gprs
 青年一代	qnyd
 穷于	qnyg
 情意	qnyh
+惬意	qnyh
 情谊	qnyl
 情义	qnym
 情欲	qnym
@@ -106725,7 +106741,7 @@ QQ密码	qqmm
 燃着	rmim
 乳罩	rmio
 乳制品	rmip
-乳脂	rmiv
+燃脂	rmiv
 乳猪	rmiw
 入驻	rmix
 乳状液	rmiy
@@ -106883,7 +106899,7 @@ QQ密码	qqmm
 燃着	rmzm
 乳罩	rmzo
 乳制品	rmzp
-乳脂	rmzv
+燃脂	rmzv
 乳猪	rmzw
 入驻	rmzx
 乳状液	rmzy
@@ -110190,7 +110206,7 @@ QQ密码	qqmm
 三缺一	sgqy
 示弱	sgrb
 事故认定	sgrd
-示人	sgrj
+素人	sgrj
 时光荏苒	sgrr
 素日	sgrr
 三人行	sgrx
@@ -111731,6 +111747,7 @@ QQ密码	qqmm
 摄像头	skxt
 手续	skxx
 摅	sky
+损友	skya
 誓愿	skya
 损益表	skyb
 手淫	skyd
@@ -112121,6 +112138,7 @@ QQ密码	qqmm
 双眸	slmo
 谥	slmo
 说明	slmr
+神明	slmr
 说明书	slms
 神秘	slmt
 试敏	slmt
@@ -112982,7 +113000,9 @@ QQ密码	qqmm
 赛博	snbf
 塞班	snbg
 神农本草经	snbj
+手拿把掐	snbq
 守兵	snbr
+手拿把掐	snbu
 守备	snbw
 塞北	snby
 宋	snc
@@ -113522,8 +113542,8 @@ QQ密码	qqmm
 四两	solf
 山峦	solh
 思恋	solh
-山路	soli
 思路	soli
+山路	soli
 四六级	solj
 四邻	solj
 睡懒觉	solj
@@ -114397,8 +114417,8 @@ QQ密码	qqmm
 顺时针	srsi
 时尚	srsj
 石蕊试剂	srsj
-身手	srsk
 顺手	srsk
+身手	srsk
 顺势	srsk
 是谁	srsl
 射杀	srsm
@@ -115589,6 +115609,7 @@ QQ密码	qqmm
 祟	svgk
 收购量	svgl
 收割	svgn
+收官	svgn
 陕甘宁	svgn
 收购	svgo
 䏡	svgp
@@ -116291,9 +116312,9 @@ QQ密码	qqmm
 绅士	sxsu
 收效甚微	sxsw
 丝丝	sxsx
-书上	sxsy
-实心实意	sxsy
 随心所欲	sxsy
+实心实意	sxsy
+书上	sxsy
 身先士卒	sxsz
 绳套	sxta
 绳梯	sxtc
@@ -118559,7 +118580,6 @@ QQ密码	qqmm
 唐宗宋祖	tisi
 跳伞	tisj
 听说	tisl
-听审	tisn
 踏实	tisn
 听上去	tisq
 听上去	tisu
@@ -122370,8 +122390,8 @@ QQ密码	qqmm
 强词夺理	ucdl
 棋道	ucdm
 气冲斗牛	ucdn
-奇耻大辱	ucdr
 桥段	ucdr
+奇耻大辱	ucdr
 气沉丹田	ucdt
 桥墩	ucdu
 七彩丹霞	ucdx
@@ -125137,6 +125157,7 @@ QQ密码	qqmm
 青年一代	unyd
 穷于	unyg
 情意	unyh
+惬意	unyh
 情谊	unyl
 情义	unym
 情欲	unym
@@ -126096,6 +126117,7 @@ QQ密码	qqmm
 迁怒	utns
 千年	utnt
 气馁	utnw
+气泡	utpd
 气派	utpd
 气体排放	utpf
 企图破坏	utph
@@ -128694,7 +128716,7 @@ Z	vyz
 无意间	wgyj
 违约金	wgyj
 无援	wgyk
-未予	wgyl
+无语	wgyl
 无恙	wgym
 无烟煤	wgym
 王爷	wgym
@@ -135219,8 +135241,8 @@ Z	vyz
 写作业	xliy
 戏剧	xljb
 详尽	xljb
-心力交瘁	xljc
 心机	xljc
+心力交瘁	xljc
 心静	xljg
 心迹	xljh
 戏剧化	xljh
@@ -138543,6 +138565,7 @@ Z	vyz
 轩辕黄帝	xyhd
 锌	xyhf
 销魂	xyhg
+销号	xyhi
 镶	xyhi
 瑕瑜互见	xyhj
 虚化	xyhj
@@ -140809,7 +140832,6 @@ Z	vyz
 英气	yeqt
 萸	yer
 薁	yera
-育儿日记	yerj
 艺人	yerj
 萸	yerk
 萦绕	yerx
@@ -141532,8 +141554,8 @@ Z	vyz
 衣冠禽兽	ygqs
 言过其实	ygqs
 邀功请赏	ygqs
-元气	ygqt
 运气	ygqt
+元气	ygqt
 远去	ygqu
 元钱	ygqy
 韫	ygr
@@ -141604,8 +141626,8 @@ Z	vyz
 衣冠禽兽	ygus
 言过其实	ygus
 邀功请赏	ygus
-元气	ygut
 运气	ygut
+元气	ygut
 远去	yguu
 元钱	yguy
 玥	ygv
@@ -143595,10 +143617,10 @@ Z	vyz
 预演	ylyd
 又要	ylyf
 永远	ylyg
-语言	ylyh
 语音	ylyh
-谣言	ylyh
 预言	ylyh
+谣言	ylyh
+语言	ylyh
 议员	ylyi
 有棱有角	ylyj
 有理有据	ylyj
@@ -153244,6 +153266,7 @@ Z	vyz
 自怜	zrln
 最累	zrlo
 自来水	zrls
+自来熟	zrls
 自利	zrlt
 自留	zrlw
 自力	zrlz
@@ -154539,6 +154562,7 @@ Z	vyz
 走近	zujq
 证券交易所	zujs
 趑趄	zuju
+增肌	zujv
 证券交易	zujy
 增加值	zujz
 走开	zukg
