--- a/rime/zzdyx_single.dict.yaml
+++ b/rime/zzdyx_single.dict.yaml
@@ -677,6 +677,8 @@ ATP	atp
 办	bnmm
 边	bnn
 边	bnnn
+𰻞	bnnn
+𰻝	bnnn
 宾	bnr
 宾	bnrm
 愎	bnt
@@ -24744,6 +24746,8 @@ GTP	gtp
 刀	onnn
 力	onnn
 乃	onnn
+𰻞	onnn
+𰻝	onnn
 懧	onno
 悺	onno
 愶	onnv
