--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,5 +1,5 @@
 var:
-  last_build_time: 1718897722
+  last_build_time: 1718982750
   option:
     ascii_punct: false
     full_shape: false
@@ -8,9 +8,10 @@ var:
   schema_access_time:
     double_pinyin_flypy: 1714512916
     pinyin_simp: 1716715120
+    rime_mint: 1718949387
     xhup: 1717283574
     zzdyx_mini: 1716323996
-    zzdyx_mod: 1718900723
+    zzdyx_mod: 1718982705
     zzdyx_mofast: 1715064968
-    zzdyx_perfect: 1716897256
+    zzdyx_perfect: 1718981350
     zzdyx_single: 1716659333
