--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -16977,34 +16977,33 @@ bilibili	blbl
 德新社	dkxs
 打下手	dkxs
 掉下去	dkxu
-待续	dkxx
 掉线	dkxx
+待续	dkxx
 抵销	dkxy
 达克效应	dkxy
 打雪仗	dkxz
 掉	dky
 打压	dkya
-大哭一场	dkyc
-打圆场	dkyc
 打样	dkyc
+打圆场	dkyc
+大哭一场	dkyc
 打渔	dkyd
 扽一扽	dkyd
 打药	dkye
-贷款余额	dkye
 抵押房	dkyf
 挡雨	dkyf
 得远	dkyg
 得意	dkyh
+抖音	dkyh
 德育	dkyh
 打掩护	dkyh
-抖音	dkyh
 德意志	dkyi
 打印纸	dkyi
-大开眼界	dkyj
 打印机	dkyj
+大开眼界	dkyj
 打牙祭	dkyj
-抵御	dkyk
 抵押	dkyk
+抵御	dkyk
 德语	dkyl
 打烊	dkym
 担忧	dkyn
@@ -58418,6 +58417,7 @@ GPRS	gprs
 两不误	lfbw
 老鸨	lfbw
 老百姓	lfbx
+老不修	lfbx
 两步	lfby
 两边	lfbz
 栗	lfc
