--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -46943,14 +46943,15 @@ GPRS	gprs
 教鞭	jfbf
 基本功	jfbg
 聚变	jfbh
+基本盘	jfbp
 聚宝盆	jfbp
 救兵	jfbr
 基本上	jfbs
 聚丙烯	jfbx
-急风暴雨	jfby
 贾宝玉	jfby
 金发碧眼	jfby
 饥附饱飏	jfby
+急风暴雨	jfby
 基础	jfca
 基层	jfcb
 基础部	jfcb
@@ -61359,8 +61360,8 @@ GPRS	gprs
 连闯	lscj
 连词	lscl
 连串	lsco
-吕氏春秋	lscq
 轮船	lscq
+吕氏春秋	lscq
 立身处世	lscs
 老生常谈	lsct
 吕氏春秋	lscu
@@ -112346,8 +112347,8 @@ QQ密码	qqmm
 双响	slxi
 神仙	slxj
 试行	slxk
+试戏	slxl
 双性恋	slxl
-圣训	slxl
 圣西门	slxm
 神性	slxn
 思来想去	slxq
@@ -112362,8 +112363,8 @@ QQ密码	qqmm
 设限	slxv
 双学位	slxw
 视线	slxx
-圣卢西亚	slxy
 试销	slxy
+圣卢西亚	slxy
 设有	slya
 试用版	slyb
 生拉硬扯	slyc
@@ -112376,9 +112377,9 @@ QQ密码	qqmm
 双赢	slyh
 神韵	slyh
 诗意	slyh
+桑叶	slyi
 双鱼座	slyi
 时来运转	slyi
-桑叶	slyi
 生拉硬拽	slyi
 双音节	slyj
 神佑	slyj
@@ -112386,8 +112387,8 @@ QQ密码	qqmm
 双月刊	slyk
 神勇	slyl
 设宴	slyn
-双眼	slyo
 视野	slyo
+双眼	slyo
 双眼皮	slyp
 试用期	slyq
 松了一口气	slyq
@@ -112395,10 +112396,10 @@ QQ密码	qqmm
 双氧水	slys
 双鸭山	slys
 试一试	slys
-死路一条	slyt
 试验田	slyt
-松了一口气	slyu
+死路一条	slyt
 试用期	slyu
+松了一口气	slyu
 谁也	slyv
 试用	slyw
 试验	slyx
@@ -112426,8 +112427,8 @@ QQ密码	qqmm
 试着	slzm
 识字	slzn
 设置	slzo
-始乱终弃	slzq
 神舟	slzq
+始乱终弃	slzq
 擅离职守	slzs
 社长	slzt
 始乱终弃	slzu
@@ -112436,9 +112437,9 @@ QQ密码	qqmm
 圣旨	slzw
 胜利在望	slzw
 视之为	slzw
-收敛止血	slzx
-神州行	slzx
 试纸	slzx
+神州行	slzx
+收敛止血	slzx
 圣战	slzy
 双子座	slzz
 审理之中	slzz
@@ -112461,12 +112462,11 @@ QQ密码	qqmm
 数百个	smbg
 数表	smbg
 善变	smbh
-数百种	smbi
 送别	smbi
 数不尽	smbj
 数倍	smbj
-善报	smbk
 首播	smbk
+善报	smbk
 受不了	smbl
 数百名	smbm
 数百年	smbn
@@ -112481,17 +112481,16 @@ QQ密码	qqmm
 槊	smcc
 燊	smcc
 受潮	smcd
-首次对	smcd
 烧菜	smce
 受处分	smcf
 四面楚歌	smcg
-生命诚可贵	smcg
 鼠目寸光	smcg
+生命诚可贵	smcg
 首次	smch
 送呈	smci
-受创	smcj
 杀虫剂	smcj
 首创	smcj
+受创	smcj
 受挫	smck
 颂词	smcl
 受宠	smcn
@@ -112499,8 +112498,8 @@ QQ密码	qqmm
 刹车片	smcp
 遂昌	smcr
 刹车	smcs
-善长	smct
 素面朝天	smct
+善长	smct
 首场	smcu
 送出	smcv
 生命垂危	smcw
@@ -117643,10 +117642,10 @@ QQ密码	qqmm
 涂满	tdmd
 涕	tdme
 添麻烦	tdmf
-洮	tdmk
 涂抹	tdmk
-汤米	tdmm
+洮	tdmk
 淘米	tdmm
+汤米	tdmm
 洮	tdmn
 滔	tdmr
 汤姆	tdms
@@ -137733,8 +137732,8 @@ Z	vyz
 墟	xuy
 幸运儿	xuye
 喜雨	xuyf
-休戚与共	xuyg
 幸运	xuyg
+休戚与共	xuyg
 闲情逸致	xuyi
 喜悦	xuyn
 幸遇	xuyo
